--- a/index.html
+++ b/index.html
@@ -334,7 +334,6 @@
                     <a href="#">Buy Now</a>
                 </div>
             </div>
-           
         </div>
     </div>
 </div>
@@ -343,7 +342,7 @@
 <div class="section_8">
     <div class="section8_main">
         <div class="section8_main_text">
-            <h1 style="font-size: 36px; font-weight: 600; color: #222222;">Latest Posts From Our Blog</h1>
+            <h1>Latest Posts From Our Blog</h1>
             <p>You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the chances of improving and expanding the business</p>
         </div>
         <div class="section8_posts">
