--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <div class="personal_logo" style="cursor: pointer;">
             <img src="img/logo.webp" alt="logo">
         </div>
-
+            <div class="nev">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+            
             <ul>
                 <li><a href="#" style="color: #8490ff;">home</a></li>
                 <li><a href="#">about</a></li>
@@ -45,6 +50,7 @@
                 </li>
                 <li><a href="#">contact</a></li>
             </ul>
+        </div>
     </div>
 </header>
 <script>
